--- a/dashboard/mainDashboard/mainDashboard.html
+++ b/dashboard/mainDashboard/mainDashboard.html
@@ -139,10 +139,10 @@
                 <div class="Recommended-subject">
                     <div class="subject">
                         <div class="img-box">
-                            <img src="/assets/English-language.jpg" alt="">
+                            <img src="/assets/myhc_78987.jpg" alt="">
                         </div>
                         <div class="sub-text">
-                            <h4>English</h4>
+                            <h4>Science</h4>
                             <div class="des">
                                 <p>12 Lessons</p>
                                 <p>3 Projects</p>
@@ -165,10 +165,10 @@
 
                     <div class="subject">
                         <div class="img-box">
-                            <img src="/assets/English-language.jpg" alt="">
+                            <img src="/assets/T-AD-008-Art-Title-Display-Lettering.jpg" alt="">
                         </div>
                         <div class="sub-text">
-                            <h4>English</h4>
+                            <h4>Art</h4>
                             <div class="des">
                                 <p>12 Lessons</p>
                                 <p>3 Projects</p>
@@ -227,12 +227,19 @@
                     </div>
                 </div>
                 <div class="note-container">
+
                     <div class="note-head">
                         <h3>Note:</h3>
-                        <button><i class="fa-solid fa-circle-plus"></i></button>
+                        <button  id="add"><i class="fa-solid fa-circle-plus"></i></button>
                     </div>
+
                     <div class="note-save">
-                        <p>asdsadsadasd</p>
+                        <div class="input-note input-noteActive"> 
+                            <input type="text"  name="" id="inputTask" placeholder="Add New Note">
+                            <button id="add-btn"><i class="fa-solid fa-paper-plane"></i></button>
+                        </div>
+                        <div class="save">
+                        </div>
                     </div>
                 </div>
             </div>
