--- a/dashboard/Lesson2.html
+++ b/dashboard/Lesson2.html
@@ -101,8 +101,8 @@
                         <label>Lesson 1-3</label>
                     </div>
 
+                    <div class="lesson-box">
                     <div class="main-lesson ">
-
                         <div id="selected ">
                             <a href="/dashboard/Lesson 1.html" class="card-course  ">
                                 <div class="text-course">
@@ -115,9 +115,8 @@
                             </a>
                         </div>
                     </div>
-
-                    <div class="main-lesson">
-                        <a id="selected">
+                    <div class="main-lesson curr-less">
+                        <a id="selected ">
                             <a href="/dashboard/Lesson2.html" class="card-course cardActive">
                                 <div class="text-course">
                                     <h4>Lesson 2 - Polynomials</h4>
@@ -142,7 +141,6 @@
                             </a>
                         </div>
                     </div>
-
                     <div class="main-lesson Quiz">
                         <div id="selected">
                             <a href="/dashboard/quiz.html" class="card-course">
@@ -154,6 +152,7 @@
                                 </div>
                             </a>
                         </div>
+                    </div>
                     </div>
             </aside>
         </div>
