--- a/aboutus/Jonard2.html
+++ b/aboutus/Jonard2.html
@@ -11,7 +11,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
 		rel="stylesheet">
 	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-	<link rel="stylesheet" href="../css/indexCSS/Our Pricing.css">
+	<link rel="stylesheet" href="/css/indexCSS/Our Pricing.css">
 	<!-- CSS only -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -62,7 +62,7 @@
                         <a href="/blog/blog.html" class="navLink">Blog</a>
                     </li>
                     <li class="navList active-nav">
-                        <a href="/aboutus/about.html" class="navLink active-nav-a active-nav">About Us</a>
+                        <a href="/aboutus/Jonard2.html" class="navLink active-nav-a active-nav">About Us</a>
                     </li>
                     <li class="navList">
                         <a href="/login.html" class="navLink ">Account</a>
@@ -79,12 +79,12 @@
 
     <section class="about-banner">
         <img src="/assets/aboutbg.png" alt="">
-        <div class="overlay">  <h1>About Us</h1></div>
+        <div class="overlay ">  <h1 data-aos="fade-up">About Us</h1></div>
     </section>
 
 
-	<section class="whoAre">
-		<div class="main-whoAre">
+	<section class="whoAre" >
+		<div class="main-whoAre" data-aos="zoom-in">
 			<div class="container-whoAre">
 				<div class="row flex-center xl-no-flex team-flex ">
 					<div class=" sm-no-float col-xl-9">
@@ -160,7 +160,7 @@
 							<p>
 							<div>EduAcademy started out as a dream, born virtually out of its founder’s head, in 2022
 								with
-								the help of a reputed group of educators from Philippines..</div>
+								the help of a reputed group of educators from Philippines</div>
 							</p>
 						</div>
 					</div>
@@ -169,8 +169,8 @@
 		</div>
 	</section>
 
-	<section class="OurMission">
-		<div class="ourmission-container">
+	<section class="OurMission"  >
+		<div class="ourmission-container" data-aos="fade-right">
 			<div class="text-ourmission">
 				<h2>Our Mission</h2>
 				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
@@ -184,8 +184,8 @@
 		</div>
 	</section>
 
-	<section class="OurMission">
-		<div class="ourmission-container flip">
+	<section class="OurMission" >
+		<div class="ourmission-container flip" data-aos="fade-left">
 			<div class="text-ourmission">
 				<h2>Our Mission</h2>
 				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
@@ -215,11 +215,11 @@
                 <h3>Instagram</h3>
                 <div class="cont-img">
                     <div class="img-grid">
-                        <img class="img1" src="../assets/istockphoto-950605046-612x612.jpg" alt="">
-                        <img class="img2" src="../assets/promote-positive-body-image-kids-839295596.jpg" alt="">
-                        <img class="img3" src="../assets/promote-positive-body-image-kids-839295596.jpg" alt="">
-                        <img class="img4" src="../assets/promote-positive-body-image-kids-839295596.jpg" alt="">
-                        <img class="img5" src="../assets/promote-positive-body-image-kids-839295596.jpg" alt="">
+                        <img class="img1" src="/assets/istockphoto-950605046-612x612.jpg" alt="">
+                        <img class="img2" src="/assets/promote-positive-body-image-kids-839295596.jpg" alt="">
+                        <img class="img3" src="/assets/promote-positive-body-image-kids-839295596.jpg" alt="">
+                        <img class="img4" src="/assets/promote-positive-body-image-kids-839295596.jpg" alt="">
+                        <img class="img5" src="/assets/promote-positive-body-image-kids-839295596.jpg" alt="">
                     </div>
                 </div>
             </div>
