--- a/dashboard/lesson3.html
+++ b/dashboard/lesson3.html
@@ -100,7 +100,7 @@
                         <label>Lesson 1-3</label>
                     </div>
 
-
+                    <div class="lesson-box">
                     <div class="main-lesson ">
                         <div id="selected ">
                             <a href="/dashboard/Lesson 1.html" class="card-course">
@@ -115,7 +115,6 @@
                             </a>
                         </div>
                     </div>
-
                     <div class="main-lesson">
                         <a id="selected">
                             <a href="/dashboard/Lesson2.html" class="card-course ">
@@ -129,7 +128,7 @@
                             </a>
                         </a>
                     </div>
-                    <div class="main-lesson">
+                    <div class="main-lesson curr-less">
                         <div id="selected">
                             <a href="/dashboard/lesson3.html" class="card-course cardActive">
                                 <div class="text-course">
@@ -143,7 +142,6 @@
                             </a>
                         </div>
                     </div>
-
                     <div class="main-lesson Quiz">
                         <div id="selected">
                             <a href="/dashboard/quiz.html" class="card-course">
@@ -156,6 +154,7 @@
                             </a>
                         </div>
                     </div>
+                </div>
             </aside>
         </div>
     </main>
