--- a/dashboard/quiz.html
+++ b/dashboard/quiz.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/css/indexCSS/Nav & Hero.css">
     <link rel="stylesheet" href="/dashboard/style.css/dashboard.css">
     <script src="https://kit.fontawesome.com/21f9873db8.js" crossorigin="anonymous"></script>
-
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -72,8 +72,8 @@
     </nav>
 
     <main class="main-course">
-        <div class="main-container">
-            <section>
+        <div class="main-container" >
+            <section >
                 <div class="video-course">
                     <div class="quiz-main">
                         <div class="quiz-box">
@@ -106,9 +106,8 @@
                         <h2>Basic Math</h2>
                         <label>Lesson 1-3</label>
                     </div>
-
+                    <div class="lesson-box">
                     <div class="main-lesson ">
-
                         <div id="selected ">
                             <a href="/dashboard/Lesson 1.html" class="card-course  ">
                                 <div class="text-course">
@@ -120,8 +119,9 @@
                                 </div>
                             </a>
                         </div>
+                    </div>
 
-                        <div class="main-lesson">
+                    <div class="main-lesson">
                             <div id="selected">
                                 <a href="/dashboard/Lesson2.html" class="card-course ">
                                     <div class="text-course">
@@ -133,8 +133,9 @@
                                     </div>
                                 </a>
                             </div>
+                    </div>
 
-                            <div class="main-lesson">
+                    <div class="main-lesson">
                                 <div id="selected">
                                     <a href="#" class="card-course">
                                         <div class="text-course">
@@ -147,27 +148,31 @@
                                         </div>
                                     </a>
                                 </div>
-                            </div>
+                    </div>
 
-                            <div class="main-lesson Quiz">
+                    <div class="main-lesson Quiz curr-less">
                                 <div id="selected">
-                                    <a href="/dashboard/quiz.html" class="card-course">
+                                    <a href="/dashboard/quiz.html" class="card-course cardActive">
                                         <div class="text-course">
                                             <h4>Quiz Challenge</h4>
                                         </div>
                                         <div class="play">
-                                            <i class="fa-solid fa-circle-play"></i>
+                                            <i class="fa-solid fa-circle-play activeP"></i>
                                         </div>
                                     </a>
                                 </div>
-                            </div>
-                        </div>
+                    </div>
+                    </div>
             </aside>
         </div>
     </main>
     <script src="js/quiz.js"></script>
     <script src="/js/XITO.js"></script>
     <script src="/dashboard/js/maincourse.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
