--- a/contact/tita.html
+++ b/contact/tita.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://kit.fontawesome.com/307dd57570.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/contactCSS/messageUs.css" />
+    <link rel="icon" type="image/x-icon" href="/assets/Main-logo.svg">
     <link rel="stylesheet" href="/css/indexCSS/Nav & Hero.css">
     <link rel="stylesheet" href="/css/indexCSS/Our Pricing.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
-    <title>Document</title>
+    <title>EduCademy-Contact</title>
   </head>
   <body>
     <nav class="main-nav" id="navigation">
