--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Online Edu</title>
-
+    <title>EduCademy</title>
+    <link rel="icon" type="image/x-icon" href="/assets/Main-logo.svg">
     <link rel="stylesheet" href="/css/indexCSS/Nav & Hero.css">
     <link rel="stylesheet" href="/css/indexCSS/what We Offer & Student Enrolled.css">
     <link rel="stylesheet" href="/css/indexCSS/LEARN ANYTHING.css">
@@ -340,56 +340,45 @@
                 <li class="dot"></li>
             </ul>
             <div id="testim-content" class="cont">
-
                 <div class="active">
                     <div class="img"><img src="/images/billgates.jpg" alt=""></div>
                     <h2>Bill Gates</h2>
-                    <p>"My experience at JJJXTZ International School is great and memorable. The mentors at JJJTXT
-                        School helped us enhance my academic and interpersonal skills. I am thankful to Training &
-                        Placement cell for providing a platform to enhance my skills and an opportunity to showcase
-                        them. In the last I am saying that The World is here at JJJTXZ."</p>
+                    <p>“My experience at EduAcademy is great and memorable. The mentors at EduAcademy helped us enhance
+                        my academic and interpersonal skills. I am thankful to Training & Placement cell for providing a
+                        platform to enhance my skills and an opportunity to showcase them. In the last I am saying that
+                        The World is here at EduAcademy.”</p>
                 </div>
 
 
                 <div>
                     <div class="img"><img src="/images/evan.jpg" alt=""></div>
                     <h2>Evan Spiegel</h2>
-                    <p>“It was a great experience studying at Sharda University, a memory to cherish for lifetime. My
-                        experience at Sharda was full of learning and grooming. Being a global university It gave me an
-                        opportunity to meet different kind of people from around the world and learnt many things from
-                        them. I am thankful to all the faculties, mentors and entire SET department for providing us
-                        with quality education. I am also grateful to TNP Cell for </p>
+                    <p>“It was a great experience studying at EduAcademy, a memory to cherish for lifetime. My
+                        experience at EduAcademy was full of learning and grooming.”</p>
                 </div>
 
 
                 <div>
                     <div class="img"><img src="/images/jawed.jpg" alt=""></div>
                     <h2>Jawed Karim</h2>
-                    <p>It was my immense luck and fortune to be the part of Sharda University where I can grow. The
-                        entire faculty and department leaves no stone unturned to shape one\'s future. My four years at
-                        Sharda have been a wonderful experience of learning with prolific exposure to outside. Huge
-                        respect, love and devotion for entire faculty members and department. It\'s their efforts that
-                        make me to count myself into better professionals.</p>
+                    <p>“It was my immense luck and fortune to be the part of EduAcademy where I can grow. The entire
+                        faculty and department leaves no stone unturned to shape one's future.” </p>
                 </div>
 
                 <div>
                     <div class="img"><img src="/images/kevin.jpg" alt=""></div>
                     <h2>Kevin Systrom</h2>
-                    <p>Sharda University has been a great contributor to the development of my personality. I have
-                        established my leadership, time management and team skills and have also been able to advance
-                        these skills to the whole new augment level. The infrastructure of Sharda University is one of
-                        the finest in the NCR region is what stands out the most. The best thing about this University
-                        is the cross-culture interaction between students from various parts of the world.</p>
+                    <p>“The infrastructure of EduAcademy is one of the finest in the NCR region is what stands out the
+                        most. The best thing about this school is the cross-culture interaction between students from
+                        various parts of the world. The professors here make the university what it is today.”</p>
                 </div>
 
                 <div>
                     <div class="img"><img src="/images/mark.jpg" alt=""></div>
                     <h2>Mark Zuckerberg</h2>
-                    <p>Sharda University has been a great contributor to the development of my personality. I have
+                    <p>“ EduAcademy has been a great contributor to the development of my personality. I have
                         established my leadership, time management and team skills and have also been able to advance
-                        these skills to the whole new augment level. The infrastructure of Sharda University is one of
-                        the finest in the NCR region is what stands out the most. The best thing about this University
-                        is the cross-culture interaction between students from various parts of the world.</p>
+                        these skills to the whole new augment level.”</p>
                 </div>
 
             </div>
