--- a/dashboard/lesson3.html
+++ b/dashboard/lesson3.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=80, initial-scale=1.0">
-    <title>Document</title>
+    <title>EduCademy-Lessons</title>
+    <link rel="icon" type="image/x-icon" href="/assets/Main-logo.svg">
     <link rel="stylesheet" href="/css/indexCSS/Nav & Hero.css">
     <link rel="stylesheet" href="/dashboard/style.css/dashboard.css">
     <script src="https://kit.fontawesome.com/21f9873db8.js" crossorigin="anonymous"></script>
