--- a/dashboard/mainDashboard/mainDashboard.html
+++ b/dashboard/mainDashboard/mainDashboard.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>EduCademy-Dashboard</title>
+    <link rel="icon" type="image/x-icon" href="/assets/Main-logo.svg">
     <link rel="stylesheet" href="/dashboard/mainDashboard/style.css">
     <link rel="stylesheet" href="/css/indexCSS/Nav & Hero.css">
     <link rel="stylesheet" href="/css/indexCSS/Our Pricing.css">
