--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
             </div>
             <div class="menu">
                 <ul class="navMenu">
-                    <li class="navList ">
-                        <a href="/index.html" class="navLink ">Home</a>
+                    <li class="navList active-nav">
+                        <a href="/index.html" class="navLink active-nav-a active-nav ">Home</a>
                     </li>
                     <li class="navList ">
                         <a href="/dashboard/mainDashboard/mainDashboard.html" class="navLink ">Dashboard</a>
@@ -67,8 +67,8 @@
                     <li class="navList ">
                         <a href="/aboutus/Jonard2.html" class="navLink ">About Us</a>
                     </li>
-                    <li class="navList active-nav">
-                        <a href="/login.html" class="navLink active-nav-a active-nav ">Account</a>
+                    <li class="navList ">
+                        <a href="/login.html" class="navLink ">Account</a>
                     </li>
                 </ul>
                 <div class="hamburger">
