--- a/dashboard/lesson5.html
+++ b/dashboard/lesson5.html
@@ -77,19 +77,13 @@
             <section>
                 <div class="video-course">
                     <div class="vid-box">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/IwW0GJWKH98"
-                            title="YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                    </div>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/HAkqb63Rzyw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                    </div>
                     <div>
-                        <h2>What Is Arithmetic?</h2>
+                        <h2>What Is Combining Like Terms?</h2>
                     </div>
                     <div class="description">
-                        <h3>Arithmetic?</h3>
-                        <p>Arithmetic is an elementary part of mathematics that consists of the study of the properties
-                            of the traditional operations on numbers—addition, subtraction, multiplication, division,
-                            exponentiation, and extraction of roots.</p>
+                        <h3>Combining Like Terms?</h3>
+                        <p>Combine means to add them, but only their coefficients. Combining like terms is really important in math, because it allows you to simplify expressions so they are more manageable. For example, it's really helpful when adding or subtracting polynomials!</p>
                     </div>
                 </div>
             </section>
@@ -129,16 +123,16 @@
                                 </a>
                             </a>
                         </div>
-                        <div class="main-lesson curr-less">
+                        <div class="main-lesson">
                             <div id="selected">
-                                <a href="/dashboard/lesson3.html" class="card-course cardActive">
+                                <a href="/dashboard/lesson3.html" class="card-course ">
                                     <div class="text-course">
                                         <h4>Lesson 3 - Arithmetic</h4>
-                                        <p class="activeP">Arithmetic is the branch of mathematics that deals with the study
+                                        <p class="">Arithmetic is the branch of mathematics that deals with the study
                                         </p>
                                     </div>
                                     <div class="play">
-                                        <i class="fa-solid fa-circle-play activeP"></i>
+                                        <i class="fa-solid fa-circle-play "></i>
                                     </div>
                                 </a>
                             </div>
@@ -160,22 +154,22 @@
                             </div>
                         </div>
     
-                        <div class="main-lesson">
+                        <div class="main-lesson curr-less">
                             <div id="selected">
-                                <a href="/dashboard/lesson5.html" class="card-course  ">
+                                <a href="/dashboard/lesson5.html" class="card-course  cardActive">
                                     <div class="text-course">
                                         <h4>Lesson 5 - Combining Like Terms</h4>
-                                        <p class="">Combine means to add them, but only their coefficients. Combining like terms 
+                                        <p class="activeP">Combine means to add them, but only their coefficients. Combining like terms 
                                         </p>
                                     </div>
                                     <div class="play">
-                                        <i class="fa-solid fa-circle-play"></i>
+                                        <i class="fa-solid fa-circle-play activeP"></i>
                                     </div>
                                 </a>
                             </div>
                         </div>
     
-                        <div class="main-lesson  " >
+                        <div class="main-lesson " >
                             <div id="selected">
                                 <a href="/dashboard/lesson6.html" class="card-course ">
                                     <div class="text-course">
