--- a/aboutus/Jonard2.html
+++ b/aboutus/Jonard2.html
@@ -188,7 +188,7 @@
 	<section class="OurMission" >
 		<div class="ourmission-container flip" data-aos="fade-left">
 			<div class="text-ourmission">
-				<h2>Our Mission</h2>
+				<h2>Our Vision</h2>
 				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
 					industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
 					and scrambled it to make a type specimen book.</p>
